Se Agrega la Programacion

--- a/app/partials/misProyectos.html
+++ b/app/partials/misProyectos.html
@@ -36,7 +36,7 @@
 <td>{{row.costosOneGoing}}</td>
 <td ><span ng-class='{"label label-warning":row.saludProyecto=="En Alerta","label label-success":row.saludProyecto=="Saludable","label label-danger":row.saludProyecto=="Critico"}'>{{row.saludProyecto}}</span></td>
 <td>{{row.statusProyecto}}</td>
-<td> <i ng-click="openDialog('status')" class="fa fa-paperclip  fa-lg"> &nbsp</i><i class="fa fa-pencil-square-o fa-lg">&nbsp</i> <i class="fa fa-calendar" ng-click="openDialog('programacion')" ></i></td>
+<td> <i  class="fa fa-paperclip  fa-lg"> &nbsp</i><i ng-click="openDialog('status')"class="fa fa-pencil-square-o fa-lg">&nbsp</i> <i class="fa fa-calendar" ng-click="openDialog('programacion')" ></i></td>
 	</tr>
 </tbody>
     </table> 
