--- a/app/partials/modal_programacion.html
+++ b/app/partials/modal_programacion.html
@@ -1,3 +1,72 @@
 <div class="modal-dialog" id="modalProgramacion">
-<h2> Ejemplo Ventana Modal</h2> 
+<h2>Programacion Actividades</h2> 
+ <div class="row">
+          <div class="col-lg-12">
+<table id="tblProgramacion" class="table table-condensed" data-data-table="" data="arrProgramacion">
+<thead >
+	<th>Linea Base</th>
+	<th ng-repeat="mes in meses">{{mes}} </th>
+</thead>
+<tbody>
+<tr ng-repeat="row in arrProgramacion" >
+<td>{{row.fecha}} </td>
+
+<td ng-repeat="mes in meses" >
+<span ng-show="mes == row.mes1" > {{row.estadoMes1}}  </span>
+<span ng-show="mes == row.mes2" > {{row.estadoMes2}}  </span>
+<span ng-show="mes == row.mes3" > {{row.estadoMes3}}  </span>
+<span ng-show="mes == row.mes4" > {{row.estadoMes4}}  </span>
+</td>
+
+</tr> 
+<tr> 
+<td></td>	
+<td> 
+<select ng-model="proyecto.etapaProyecto">
+    <option
+            ng-repeat="operator in etapaProyecto"
+            value="{{operator.value}}">
+      {{operator.nombre}}
+    </option>
+</select>
+</td>
+<td> 
+<select ng-model="proyecto.etapaProyecto">
+    <option
+            ng-repeat="operator in etapaProyecto"
+            value="{{operator.value}}">
+      {{operator.nombre}}
+    </option>
+</select>
+</td>
+<td> 
+<select ng-model="proyecto.etapaProyecto">
+    <option
+            ng-repeat="operator in etapaProyecto"
+            value="{{operator.value}}">
+      {{operator.nombre}}
+    </option>
+</select>
+</td>
+<td> 
+<select ng-model="proyecto.etapaProyecto">
+    <option
+            ng-repeat="operator in etapaProyecto"
+            value="{{operator.value}}">
+      {{operator.nombre}}
+    </option>
+</select>
+</td> 
+</tr>
+</tbody>
+
+</table> 
+
+</div>
+</div> 
+
+ <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+        </div>
 </div> 
