--- a/app/partials/misProyectos.html
+++ b/app/partials/misProyectos.html
@@ -1,3 +1,24 @@
+      <!-- Sidebar -->
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">Gestion de Proyectos KCC</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+  <!-- Menu Izquierda  -->
+<menu menus=''></menu>
+          <cabecera></cabecera>
+        </div><!-- /.navbar-collapse -->
+      </nav>
+
  <div class="row">
           <div class="col-lg-12">
             <h1>Mis Proyectos <small>Proyectos en ejecución</small></h1>
