--- a/app/partials/dashboard.html
+++ b/app/partials/dashboard.html
@@ -1,3 +1,4 @@
+<div id="wrapper">
     <!-- Sidebar -->
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -307,6 +308,6 @@
 
 
     </div>  <!-- Fin Row --> 
-
+</div>
 
 
