--- a/app/partials/misProyectos.html
+++ b/app/partials/misProyectos.html
@@ -1,3 +1,5 @@
+<div id="wrapper">
+
       <!-- Sidebar -->
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -64,3 +66,4 @@
 </div> 
 </div> 
 </div> 
+ </div>
